# rusty_shorts

./: .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml  docker-compose.yml
migrations/2025-01-08-210626_create_urls_table/: up.sql
src/: db.rs  main.rs  schema.rs
src/api/: delete_slug.rs  mod.rs  qr.rs  redirect_to_original.rs  shorten_url.rs
src/graphql/: schema.rs
src/models/: url.rs
src/utils/: mod.rs  qr_code.rs  utils.rs
static/: index.html
