[package]
name = "rusty-shorts"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }

diesel = { version = "2.2.0", features = ["postgres"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"

