[package]
name = "rusty-shorts"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"


diesel = { version = "2.2.0", features = ["postgres"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"

# for slug generation
slug = "0.1.6"
nanoid = "0.4.0"

# For grphql
juniper = "0.16"  # GraphQL library
juniper_rocket = "0.9"  # Integrates GraphQL with Rocket

# For qr code
image = "0.25.5"
qrcode = "0.14.1"